--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
 site_name: Qxel Documentation
 site_description: Documentation for Qxel - For Business, Users, and Partners
-site_url: https://qxel.github.io/docs/
+site_url: https://mr-izu.github.io/Calicut-University/
 
-repo_name: qxel/docs
-repo_url: https://github.com/qxel/docs
+repo_name: mr-izu/Calicut-University
+repo_url: https://github.com/mr-izu/Calicut-University
 
 nav:
   - Home: index.md
